--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "typeorm": "^0.3.26"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^6.0.0"
   }
 }
