--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
+    "@nestjs/platform-express": "^11.1.6",
     "@nestjs/typeorm": "^11.0.0",
     "@nestjs/websockets": "^11.1.6",
     "bcrypt": "^6.0.0",
@@ -16,6 +17,13 @@
     "typeorm": "^0.3.26"
   },
   "devDependencies": {
+    "@nestjs/cli": "^11.0.10",
     "@types/bcrypt": "^6.0.0"
+  },
+  "scripts": {
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:prod": "node dist/main.js",
+    "build": "nest build"
   }
 }
